# yolo-detection-jewelry

./: .gitignore  Dataset_converter.ipynb  inference.py  onnx_detector.py  pyproject.toml  train_yolo.py  yolo_train.py
